--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,10 +12,13 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.19.2",
     "axios": "^0.26.1",
+    "express": "^4.17.3",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
